objects/smlfcom__SML_Changes__c.object
<CustomObject>
    <fields>
        <fullName>smlfcom__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SML Changes</relationshipLabel>
        <relationshipName>SML_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smlfcom__Current_Bucket__c</fullName>
        <label>Current Bucket</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Dimension1__c</fullName>
        <externalId>true</externalId>
        <label>Dimension-1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Dimension2__c</fullName>
        <label>Dimension-2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Dimension3__c</fullName>
        <label>Dimension-3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Filter_Chart_Type__c</fullName>
        <label>Filter Chart Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waterfall</fullName>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
                <value>
                    <fullName>Custom_Trendline</fullName>
                </value>
                <value>
                    <fullName>Forecast_Details</fullName>
                </value>
                <value>
                    <fullName>Quarterly_Summary</fullName>
                </value>
                <value>
                    <fullName>Extrapolation_Whatif</fullName>
                </value>
                <value>
                    <fullName>Duration</fullName>
                </value>
                <value>
                    <fullName>SML Change Filter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__Filter_Fields__c</fullName>
        <label>Filter Fields</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dimension1__c</fullName>
                </value>
                <value>
                    <fullName>Dimension2__c</fullName>
                </value>
                <value>
                    <fullName>Dimension3__c</fullName>
                </value>
                <value>
                    <fullName>Dimension5__c</fullName>
                </value>
                <value>
                    <fullName>Dimension6__c</fullName>
                </value>
                <value>
                    <fullName>Dimension7__c</fullName>
                </value>
                <value>
                    <fullName>Record_Name__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__Filter_Value__c</fullName>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Is_Test_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Test Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__Metric2__c</fullName>
        <label>Metric2</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__Metric_3__c</fullName>
        <label>Metric 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__Metric_4__c</fullName>
        <label>Metric 4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__Metric_5__c</fullName>
        <label>Metric 5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__Metric__c</fullName>
        <label>Metric</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SML_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smlfcom__Period__c</fullName>
        <label>Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Previous_Bucket__c</fullName>
        <label>Previous Bucket</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Previous_Metric__c</fullName>
        <label>Previous Metric</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__Record_Name__c</fullName>
        <label>Record Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__SF_Id__c</fullName>
        <label>SF Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Snapshot_Duration__c</fullName>
        <label>Snapshot Duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>six_months</fullName>
                </value>
                <value>
                    <fullName>this_quarter</fullName>
                </value>
                <value>
                    <fullName>this_month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__Start_Date_Filter__c</fullName>
        <label>Start Date Filter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>Qrtr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__Test_Field_To_Be_Deleted__c</fullName>
        <label>Test Field To Be Deleted</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__View_Type_Text__c</fullName>
        <description>Text version of View Type picklist</description>
        <externalId>true</externalId>
        <label>View Type (Text)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__View_Type__c</fullName>
        <label>View Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waterfall</fullName>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
                <value>
                    <fullName>Custom_Trendline</fullName>
                </value>
                <value>
                    <fullName>Forecast_Details</fullName>
                </value>
                <value>
                    <fullName>Quarterly_Summary</fullName>
                </value>
                <value>
                    <fullName>Extrapolation_Whatif</fullName>
                </value>
                <value>
                    <fullName>Duration</fullName>
                </value>
                <value>
                    <fullName>SML Change Filter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__previous_ref_date__c</fullName>
        <label>previous_ref_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>smlfcom__ref_date__c</fullName>
        <label>ref_date</label>
        <type>Date</type>
    </fields>
    <label>SML Change</label>
    <listViews>
        <fullName>smlfcom__All</fullName>
        <columns>NAME</columns>
        <columns>smlfcom__View_Type__c</columns>
        <columns>smlfcom__Dimension1__c</columns>
        <columns>smlfcom__Metric__c</columns>
        <columns>smlfcom__Metric2__c</columns>
        <columns>smlfcom__Metric_3__c</columns>
        <columns>smlfcom__Metric_4__c</columns>
        <columns>smlfcom__Metric_5__c</columns>
        <columns>smlfcom__Dimension2__c</columns>
        <columns>smlfcom__Dimension3__c</columns>
        <columns>smlfcom__ref_date__c</columns>
        <columns>smlfcom__Dimension6__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smlfcom__View_Type__c</field>
            <operation>equals</operation>
            <value>Extrapolation_Whatif</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>smlfcom__pipeline_coverage</fullName>
        <columns>NAME</columns>
        <columns>smlfcom__Filter_Chart_Type__c</columns>
        <columns>smlfcom__Filter_Fields__c</columns>
        <columns>smlfcom__Filter_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smlfcom__View_Type__c</field>
            <operation>equals</operation>
            <value>SML Change Filter</value>
        </filters>
        <label>pipeline coverage</label>
    </listViews>
    <nameField>
        <displayFormat>SML-CN-{00000}</displayFormat>
        <label>SML Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SML Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>